# blend-safe

./: .gitignore  Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  global.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts  webpack.config.js
integration-tests/: config.py  pytest.ini  requirements.txt  test_wallet.py
src/blend_safe_backend/: Cargo.toml  blend_safe_backend.did
src/blend_safe_backend/src/: crypto.rs  ecdsa.rs  lib.rs  signer.rs  wallet.rs
src/blend_safe_frontend/: App.tsx  blend_safe.ts  index.css  index.html  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/blend_safe_frontend/components/: AccountCard.tsx  AccountCards.tsx  Badge.tsx  BasicInfoForm.tsx  ConfirmationModal.tsx  Congratulations.tsx  ConnectWallet.tsx  Counter.tsx  EmptyPlaceholder.tsx  ImportTransactionModal.tsx  Indicator.tsx  LoadingModal.tsx  LoadingPlaceholder.tsx  MembersAndConfirmations.tsx  Modal.tsx  Pagination.tsx  ProposeSendErc20TokenModal.tsx  ProposeSendNativeTokenModal.tsx  SelectAccount.tsx  Settings.tsx  Sidebar.tsx  SignatureLoadingModal.tsx  SignersForm.tsx  SigningThresholdForm.tsx  TransactionLoadingModal.tsx  Transactions.tsx  WalletConnect.tsx  Welcome.tsx  index.ts
src/blend_safe_frontend/config/: index.ts
src/blend_safe_frontend/frontend/: App.tsx  main.tsx
src/blend_safe_frontend/hooks/: useCopyToClipboard.ts
src/blend_safe_frontend/layouts/: MainLayout.tsx
src/blend_safe_frontend/src/: index.html  (+1 more)
(+65 files in other folders)
