[workspace]
members = [
    "src/blend_safe_backend",
]
resolver = "2"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.10.0"
serde = "1.0.126"
serde_derive = "1.0.126"
sha2 = "0.10.6"
hex = "0.4.3"
libsecp256k1 = { version = "0.6.0", package = "libsecp256k1", default-features = false, features = ["lazy-static-context"] }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
